--- a/MyPartyCore.WebAPI/wwwroot/index.html
+++ b/MyPartyCore.WebAPI/wwwroot/index.html
@@ -166,6 +166,9 @@
                 success: function (party) {
                     reset();
                     $("table tbody").append(row(party));
+                },
+                fail: function (data) {
+                    console.log(data);
                 }
             })
         }
